--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@cesarujos/suitecrm-client",
+  "name": "suitecrm-client",
   "publishConfig": {
     "access": "public"
   },
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Cliente para la API REST v4.1 de SuiteCRM para Node.js",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -12,7 +12,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "typecheck": "tsc --noEmit && tsc --noEmit -p examples/tsconfig.json",
+    "typecheck": "tsc --noEmit",
     "prepublishOnly": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,9 +25,8 @@
   "author": {
     "name": "Cesarujos",
     "email": "cjuriartec@gmail.com",
-    "url": "https://github.com/cesarujos2"
+    "url": "https://github.com/cjuriatec"
   },
-  "license": "ISC",
   "dependencies": {
     "axios": "^1.13.4",
     "crypto-js": "^4.2.0"
